--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
   width: 100%;
+  margin: auto;
   display: flex;
   flex-direction: column;
+  font-family: "Nunito Sans", sans-serif;
 }
