--- a/src/components/NewToDoForm/NewTodo.css
+++ b/src/components/NewToDoForm/NewTodo.css
@@ -2,16 +2,22 @@
   display: flex;
   justify-content: center;
   flex-direction: row;
-  margin-top: 20vh;
   margin-bottom: 5vh;
-}
-.inputField {
-  width: 50vw;
-  margin-right: 5vw;
+  margin-left: 60px;
 }
 .selectField {
   width: 12vw;
 }
 .addNewToDoIcon {
-  color: rgb(250, 114, 17);
+  color: #fba100;
+}
+
+.inputField {
+  width: 40vw;
+}
+
+@media only screen and (max-width: 600px) {
+  .inputField {
+    width: 50vw;
+  }
 }
