--- a/src/components/ViewToDo/ViewToDoItem.css
+++ b/src/components/ViewToDo/ViewToDoItem.css
@@ -1,7 +1,16 @@
 .completed {
-  color: rgb(48, 140, 48);
+  color: #408697;
 }
 
 .notCompleted {
-  color: rgb(255, 54, 54);
+  color: #fba100;
+}
+.listItem {
+  border: 2px solid #408697;
+  margin-top: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 15px -6px #000000;
+}
+
+@media only screen and (max-width: 600px) {
 }
