--- a/src/components/ViewToDo/ViewToDoList.css
+++ b/src/components/ViewToDo/ViewToDoList.css
@@ -7,9 +7,9 @@
   padding-bottom: 1rem;
 }
 .listItems {
-  width: 50vw;
+  width: 70vw;
   overflow: auto;
-  height: 45vh;
+  height: 38vh;
 }
 .toDoText {
   padding-right: 30vw;
@@ -17,7 +17,7 @@
 }
 
 .selectField {
-  width: 12vw;
+  width: 160px !important;
   margin-bottom: 1rem;
 }
 
@@ -25,11 +25,11 @@
   margin-bottom: 1rem;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
   .listItems {
-    width: 80vw;
+    width: 400px;
   }
   .selectField {
-    width: 42vw;
+    width: 160px !important;
   }
 }
