--- a/src/components/NewToDoForm/NewTodo.css
+++ b/src/components/NewToDoForm/NewTodo.css
@@ -13,11 +13,11 @@
 }
 
 .inputField {
-  width: 30vw;
+  width: 50vw;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
   .inputField {
-    width: 60vw;
+    width: 280px;
   }
 }
