--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,10 @@ body {
   width: 100%;
   background-color: #f2f2f2f2;
 }
-
+html,
+body {
+  height: 100%;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
