--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -2,8 +2,8 @@
   margin: auto !important;
 }
 .signUpForm {
-  width: 15rem !important;
-  height: 15rem;
+  width: 16rem !important;
+  height: 16rem;
   padding: 1.5rem;
   margin: auto;
 }
@@ -16,4 +16,8 @@
 
 .signUpForm > div {
   margin-bottom: 2rem;
+}
+
+.registerAlert {
+  margin-bottom: 3px !important;
 }
